[package]
name = "train-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[package.metadata.android.permission]]
name = "android.permission.INTERNET"

[dependencies]
macroquad = "0.3"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "rustls-tls"] }
regex = "1.3.3"
chrono = "0.4"
