[package]
name = "train-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Generated using: http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html
[package.metadata.android]
res = "android_res"
icon = "@mipmap/skm_launcher"

[[package.metadata.android.permission]]
name = "android.permission.INTERNET"

# Enable symbols for profiling
#[profile.release]
#debug = 1

[dependencies]
macroquad = "0.3"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
regex = "1.3.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.85"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "train_helper_lib"
path = "src/lib.rs"

